--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <!-- for cache changes in case im changing smthing later -->
+        <meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
+        <!-- ^ above is for cache changes -->
         <title>BPD-Libs</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
