--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <option>I don't know</option>
                 </select>
                 ( and/or maybe
-                <input class="issue-emotion" type="select" placeholder="Emotion here..." /> ) because we're having <select required class="reason">
+                <input class="issue-emotion" type="text" placeholder="Emotion here..." /> ) because we're having <select required class="reason">
                 <option>Select one</option>
                 <option>a fear of abandonment</option>
                 <option>perceived feelings of insult</option>
