--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <option>some space for a while</option>
                 <option>do something else with you</option>
                 <option>something else (explain in writing)</option>
-                
-                </select>
+                </select>.
             </p>
+            <p class="finish">Screenshot this page when you're done for use!</p>
         </div>
         
         <div class="center">
@@ -71,7 +71,7 @@
             <a href="https://www.talkspace.com/mental-health/conditions/borderline-personality-disorder/symptoms/bpd-splitting/">Talkspace</a>
         <p class="info">
             It’s important to note that <strong>understanding</strong> BPD triggers won’t necessarily make the feelings go away. However, by increasing awareness, you can develop coping mechanisms and learn how to deal with BPD.
-            </p>
+        </p>
             <hr>
             <h3 class="resources">Helpful Resources (for myself)</h3>
             <a href="https://www.reddit.com/r/BPD/comments/6hwm5x/my_guide_to_splitting/">Someone's guide for managing splits (Reddit)</a>
